2006-06-29  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item.

	* sbuild/sbuild-chroot-config.cc
	(parse_data): Remove exception wrapper, now that sbuild::keyfile
	throws exceptions containing more detailed information.

	* sbuild/sbuild-chroot-file.cc
	(get_file_repack, set_file_repack): New methods to get and set
	file repack status.

	* All chroot get_keyfile and set_keyfile methods are implemented
	in terms of the new keyfile::[gs]et_object_(list_)value methods.

	* sbuild/sbuild-keyfile.h: Add templated static methods for
	getting and setting key values and list values using pointers to
	methods of other objects.

2006-06-29  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-keyfile.cc: Add test for getting line numbers.

	* sbuild/sbuild-keyfile.h:
	(item_type, group_type): Add line number to both tuples.
	(set_value): Add overloaded private method which adds a line
	number to its arguments.
	(operator >>): Set line numbers when deserialising.

	* sbuild/sbuild-keyfile.cc
	(get_line): New methods for getting the line numbers of groups and
	keys.
	(set_group): Add overloaded private method which adds a line
	number to its arguments.

2006-06-28  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item.

	* sbuild/sbuild-util.cc (narrow_string, widen_string): Throw a
	runtime_error on conversion failure.

2006-06-28  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-auth.cc: Fix switched authentication and
	authorisation messages.

2006-06-28  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.1.in, dchroot/dchroot.1.in,
	dchroot-dsa/dchroot-dsa.1.in: Document debug levels.

	* schroot/schroot-base-options.(cc|h)
	(check_options): Check the debug level given with --debug.

2006-06-28  Roger Leigh  <rleigh@debian.org>

	* Clean up locale and exception handling in all main stub
	routines.

2006-06-28  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed items.

	* schroot/schroot-base-main.cc